--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "node": ">=0.10.3 <0.12"
   },
   "devDependencies": {
+    "arcgis-rest-client": "0.0.2",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-shell": "^2.1.0",
+    "grunt-sync": "^0.6.2",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
