--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,5 @@
     "test",
     "tests"
   ],
-  "resolutions": {
-    "dijit": "v1.11.2/esri-3.18.0",
-    "dojox": "v1.11.2/esri-3.18.0",
-    "dojo": "v1.11.2/esri-3.18.0"
-  },
-  "dependencies": {
-    "arcgis-js-api": "3.18.0"
-  }
+  "dependencies": {}
 }
